fixed banner alignment

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -48,6 +48,7 @@ main > section:not(.join-section){
 
 .nav-text-col {
     color: #8987A1;
+    
 }
 
 .nav-text-color {
@@ -77,7 +78,9 @@ main > section:not(.join-section){
 
 .banner-left {
     width: 570px;
-    height: 299px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 
